<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">XeroxRDC</string>
    <string name="action_settings">Settings</string>
    <string name="title_cameralist">Connections</string>
    <string name="title_video">Video</string>
    <string name="title_image">Image</string>
    <string name="title_graph">Graph</string>
    <string name="pref_brightness_summ">Set the brightness of the camera image.</string>
    <string name="pref_brightness">Brightness</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="pref_streamURL">Stream URL</string>
    <string name="pref_streamURL_summ">Address of the camera which is streaming video. Must be an Mjpeg stream.</string>
    <string name="app_settings">XeroxRDC Settings</string>
    <string name="default_ip">192.168.43.55:8080</string>
    <string name="pref_saveframes">Save Video Frames</string>
    <string name="pref_saveframes_summ">Extract and save jpeg frames from video.</string>
    <string name="pref_frame_path">Saved frame location</string>
    <string name="pref_frame_path_summ">Directory in which to save video frames.</string>
    <string name="default_framepath">/storage/sdcard0/XeroxRDC/SavedStream/</string>
    <item name="default_slider" format="float" type="string">0.5</item>
    <string name="pref_contrast">Contrast</string>
    <string name="pref_contrast_summ">Contrast Summary</string>
    <string name="pref_sharpness">Sharpness</string>
    <string name="pref_sharpness_summ">Sharpness Summary</string>
    <string name="pref_saturation">Saturation</string>
    <string name="pref_saturation_summ">Saturation Summary</string>
    <string name="app_exit">Exit</string>
    <string name="app_path">/storage/sdcard0/XeroxRDC/</string>
    <string name="pref_tcpstream">TCP Stream URL</string>
    <string name="pref_tcpstream_summ">TCP Stream URL goes here</string>
    <string name="feature_selection">Feature Selection</string>
    <bool name="default_switch">true</bool>
    <string name="sony_msg_wifi_disconnect">(Wi-Fi disconnected)</string>
    <string name="sony_msg_device_search_finish">Device discovery successfully completed.</string>
    <string name="sony_msg_error_device_searching">Failed to search.\\nStopped.</string>
    <string name="sony_msg_error_non_supported_device">Unsupported device in this sample app.</string>
    <string name="sony_msg_error_connection">Failed to connect to the device.</string>
    <string name="sony_msg_error_api_calling">Cannot control the device by API.</string>
    <string name="sony_msg_error_take_picture">Failed to take a picture.</string>
    <string name="sony_msg_rec_start">Recording started.</string>
    <string name="sony_msg_rec_stop">Recording stopped.</string>
    <string name="sony_button_rec_start">Start movie\\nrecording</string>
    <string name="sony_button_rec_stop">Stop movie\\nrecording</string>
    <string name="sony_button_take_picture">Take Picture</string>
    <string name="sony_no_image">No image</string>
    <string name="sony_msg_search_devices">Connect to compatible camera via Wi-Fi settings before device discovery.</string>
    <string name="sony_button_start_search">Start device discovery</string>
    <string name="msg_deviceDiscovery">Device Discovery</string>
    <string name="msg_About">\n1. Ensure the camera is on and the WiFi logo appears on its display.\n2. Connect to the camera using the tablet\'s WiFi settings.\n3. Once connected, you may press the button below to begin device discovery.\n\n\n</string>
</resources>
